Modified the KnuthSequence system. Transferred logic from the layout managers to the KnuthSequences.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@358534 13f79535-47bb-0310-9956-ffa450edef68